# Multi-Robot-Inspection-System

./: .gitignore  README.md
archive/Multi-Robot-Inspection-System/ros_ws/doc/20260603/log/: 20260603_180800.md
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_dryrun/: README.md  robots.yaml  task_runner.py
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_dryrun/tasks/: inspect_lab_room.yaml  inspect_restricted_zone.yaml
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v010/: README.md  package.xml  setup.cfg
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v010/config/: world_model.yaml
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v010/launch/: bringup_nav.launch.py  nav_gui.launch.py
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v010/task_layer_v010/: nav_gui_node.py
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v020/: README.md  setup.cfg
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v020/config/: nav2_inspection.yaml
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v020/launch/: scene_builder.launch.py  task_gui.launch.py
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v020/task_layer_v020/: inspection_runner.py  model_spawner.py  report_writer.py  scan_analyzer.py  set_initial_pose_node.py
archive/Multi-Robot-Inspection-System/ros_ws/experiments/task_layer_v020/worlds/: map.sdf
ros_ws/: .gitignore  README.md
ros_ws/doc/: COMMANDS.md  DESCRIPTION.md  README.md
ros_ws/doc/20260526/cmd/: 20260526_234908.md  20260526_235649.md
ros_ws/doc/20260526/dbg/: 20260526_234908.md  20260526_235649.md
ros_ws/doc/20260526/plan/: 20260526_234908.md  20260526_235649.md
ros_ws/doc/20260527/cmd/: 20260527_000616.md  20260527_003926.md  20260527_004302.md  20260527_005455.md  20260527_011440.md  20260527_012038.md  20260527_012232.md  20260527_013544.md  20260527_015920.md
ros_ws/doc/20260527/dbg/: 20260527_000616.md  20260527_003926.md  20260527_004302.md  20260527_005455.md  20260527_011440.md  20260527_012038.md  20260527_012232.md  20260527_013544.md  20260527_015920.md
ros_ws/doc/20260527/plan/: 20260527_000616.md  20260527_003926.md  20260527_004302.md  20260527_005455.md  20260527_011440.md  20260527_012038.md  20260527_012232.md  20260527_013544.md  20260527_015920.md
ros_ws/doc/20260531/cmd/: 20260531_194923.md  20260531_200659.md  20260531_205938.md  20260531_210609.md  20260531_211820.md  20260531_213926.md  20260531_215238.md
ros_ws/doc/20260531/dbg/: 20260531_194923.md
ros_ws/doc/20260531/plan/: 20260531_194923.md  20260531_200659.md  20260531_205938.md  20260531_210609.md  20260531_211820.md
ros_ws/doc/20260601/cmd/: 20260601_161808.md
ros_ws/doc/20260601/plan/: 20260601_161808.md
ros_ws/doc/20260603/cmd/: 20260603_180800.md
ros_ws/doc/20260603/dbg/: 20260603_180800.md
ros_ws/doc/20260603/plan/: 20260603_180800.md
ros_ws/doc/20260609/log/: 20260609_230000.md
ros_ws/doc/20260609/plan/: 20260609_230000.md
ros_ws/doc/20260610/log/: 20260610_120000.md
ros_ws/experiments/task_layer_dryrun/tasks/: inspect_server_room.yaml  inspect_storage_area.yaml  inspect_utility_area.yaml
ros_ws/experiments/task_layer_v010/: setup.py
ros_ws/experiments/task_layer_v010/launch/: go_to_area.launch.py
ros_ws/experiments/task_layer_v010/task_layer_v010/: go_to_area_node.py
ros_ws/experiments/task_layer_v020/: package.xml  setup.py
ros_ws/experiments/task_layer_v020/launch/: bringup_nav.launch.py
ros_ws/experiments/task_layer_v020/task_layer_v020/: go_to_area_node.py  scene_builder_gui_node.py  task_gui_node.py
ros_ws/maps/: base_20260527.pgm  base_20260527.yaml  base_aligned_20260602.pgm  base_aligned_20260602.yaml  tb3_map.pgm
ros_ws/src/sim/: CMakeLists.txt  package.xml
ros_ws/src/sim/launch/: ctl.launch.py  map.launch.py  mapping.launch.py  multi_sim.launch.py
ros_ws/src/sim/models/turtlebot3_burger_cam_ns/: model.sdf
ros_ws/src/sim/models/turtlebot3_burger_d436_ns/: model.sdf
ros_ws/src/sim/scripts/: ctl.py  mapping_ctl.py
ros_ws/src/sim/worlds/: map.world
ros_ws/src/task_layer/: CMakeLists.txt  package.xml
ros_ws/src/task_layer/archive/: go_to_area_node.py
ros_ws/src/task_layer/config/: nav2_inspection.yaml  robots.yaml  world_model.yaml
ros_ws/src/task_layer/launch/: bringup_nav.launch.py  multi_nav.launch.py  task_gui.launch.py
ros_ws/src/task_layer/maps/: tb3_map.pgm  tb3_map.yaml
ros_ws/src/task_layer/models/: small_box_obstacle.sdf
ros_ws/src/task_layer/rviz/: dual_view.rviz
ros_ws/src/task_layer/task_layer/: anomaly_scanner.py  area_clear_acceptance.py  area_clear_check.py  inspection_runner.py  model_spawner.py  photo_diff_check.py  report_writer.py  reset_to_dock.py  scene_builder_gui_node.py  set_initial_pose_node.py  task_allocator.py  task_gui_node.py
